feat: [COSRS-22] finalizada implementação do obter usuários
